--- a/version-4/server/package.json
+++ b/version-4/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Countries API",
+  "name": "countries-app-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,9 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
-  "dependencies": {
-    "express": "^5.1.0",
-    "pg": "^8.16.3"
-  }
+  "type": "module"
 }
