renamed v4 project name

--- a/version-4/server/package.json
+++ b/version-4/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "countries-app-server",
+  "name": "countries-app-server-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
