--- a/version-2/package.json
+++ b/version-2/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.8.1",
     "react-router-dom": "^7.8.1",
-    "react-switch": "^7.1.0"
+    "react-switch": "^7.1.0",
+    "react-tooltip": "^5.29.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
